assets/style.css
@font-face {
    font-family: 'Bebas Neue Regular';
    src: url('bebasneue-regular-webfont.woff2') format('woff2'),
         url('bebasneue-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

#headshot {
    height: auto;
    width: 350px;
}

body {
    font-family: "Bebas Neue Regular";
    -webkit-font-smoothing: antialiased;
    background-color: #fffef2;
}

#links a{
    color: white;
    letter-spacing: 1rem;
}

#links a:hover{
    color: rgb(179, 179, 179);   
}

#links a:active{
    color: rgb(92, 91, 91);   
}

#demo {
    letter-spacing: .45rem;
    font-size: 5rem;
}

.column {
    border: solid 0px blue;
}

#projects, #resume, #contact {
    font-size: 10rem;
}

#project-img {
    box-shadow: 5px 5px rgb(0, 0, 0);
    border: solid 1px black;
}

#mobile-resume {
    display: none;
}

@media screen and (max-width:768px) {
    #resume-file {
        display:none;
    }
    #mobile-resume {
        display:flex;
        font-size: 3rem;
    }
    #headshot{
        height:250px;
    }
}

